# 1-st-task

./: CMakeLists.txt  README.md
Zadanie1/: CMakeLists.txt  main.cpp
Zadanie1/finalz1/: z1
